--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,38 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="signup-container">
+  <div class="signup-title">
+    <h1 class="sign_up_title">REGISTER</h1>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+  <%= form_with(model: @user, url: sign_up_path) do |form| %>
+    <% if @user.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+        <ul>
+          <% @user.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="field-signup">
+    <label for="Name" class="visually-hidden">Full Name</label>
+      <%= form.text_field :name, placeholder:'Full name', style: 'width: 98%; border: none; padding: 5px 5px 5px 5px' %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+    <div class="field-signup">
+    <label for="email" class="visually-hidden">Email</label>
+      <%= form.email_field :email, placeholder:'Email', style: 'width: 98%; border: none; padding: 5px 5px 5px 5px' %>
+    </div>
 
-<%= render "devise/shared/links" %>
+    <div class="field-signup">
+    <label for="password" class="visually-hidden">Password</label>
+      <%= form.password_field :password, placeholder: 'Password', style: 'width: 98%; border: none; padding: 5px 5px 5px 5px' %>
+    </div>
+
+    <div class="actions">
+      <%= form.submit "Sign Up", class: "btn btn-primary" %>
+      <%= link_to "Log In", login_path, class: "btn btn-secondary" %>
+    </div>
+  <% end %>
+</div>
