--- a/app/views/purchases/new.html.erb
+++ b/app/views/purchases/new.html.erb
@@ -30,6 +30,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit "Save", class: "create-button" %>
+    <%= form.submit "SAVE", class: "create-button" %>
   </div>
 <% end %>
